--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-    margin: 0;
     font-family: 'Poppins', sans-serif;
+    @apply m-0 bg-gray-100;
 }
 
 .grid-auto-rows-1fr {
